Add Cloud admin credential

--- a/modules/setup-scripts/conf/wso2as-5.2.1/repository/conf/appcloud/appcloud.properties
+++ b/modules/setup-scripts/conf/wso2as-5.2.1/repository/conf/appcloud/appcloud.properties
@@ -135,3 +135,7 @@ Google.Tracking.Id=dummy_tracker_id
 
 #Zopim Chat
 Zopim.Chat.Id=3u5GXGidREH2DDzU8flaiJan1BdOwqNk
+
+#Cloud Admin Credential
+Cloud.Admin.Username=AdminUsername
+Cloud.Admin.Password=AdminPasswd
